# adv_mla_lab_1

./: Makefile  pyproject.toml  requirements.txt
adv_mla_lab_1/: dataset.py  features.py  plots.py
adv_mla_lab_1/modeling/: predict.py  train.py
models/: linear_poly_2.joblib  ohe.joblib  rf2.joblib
notebooks/: 1_baseline.ipynb  2_linear_poly.ipynb  36120_25SP_Lab01_Ex01_Solutions.ipynb  36120_25SP_Lab01_Ex02_Solutions.ipynb  36120_25SP_Lab01_Ex03_Solutions.ipynb
