[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adv_mla_lab_1"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["adv_mla_lab_1"]
force_sort_within_sections = true
